--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <header class="bg-gradient-to-r from-orange-600 to-black text-white shadow-lg py-4 px-6 md:px-12 fixed w-full z-50 rounded-b-xl">
         <nav class="container mx-auto flex justify-between items-center">
             <a href="#" class="rounded-lg p-2 transition duration-300">
-                <img src="image/logo.png" alt="HAM CLUB OF RVCE Logo" class="h-12 w-auto">
+                <img src="logo.png" alt="HAM CLUB OF RVCE Logo" class="h-12 w-auto">
                 </a>
             <div class="hidden md:flex space-x-8">
                 <a href="#home" class="text-lg font-medium hover:text-yellow-200 transition duration-200 py-2 px-3 rounded-md hover:bg-black hover:bg-opacity-20">Home</a>
